--- a/CSS/hero.css
+++ b/CSS/hero.css
@@ -5,7 +5,8 @@
     position: relative;
     height: 100vh;
     width: 100%;
-    overflow: visible;
+    overflow-x: clip;
+    overflow-y: visible;
     z-index: 2;
     background-color: #050510;
 }
